@@ -1,4 +1,5 @@
 0.8.3.b
+    - simc works for MID, queue, and sender
     - DISK_FACTOR and COMMAND_FACTOR added
     - GLOBAL_RELAY_DISABLE_SENDER_CHECKING -> DISABLE_SENDER_CHECKING
 
